Added functionality for Microsoft Teams and updated README.

--- a/shellbot.conf
+++ b/shellbot.conf
@@ -2,7 +2,7 @@
 slackHook = https://hooks.slack.com/services/<randomstuff>
 botName = ShellBot
 channel = #shellbot
-[slackShellBot]
+[ShellBot]
 sleepTime = 60
 [empire]
 db = /opt/Empire/data/empire.db
@@ -11,3 +11,5 @@ msfRpcHost = 127.0.0.1
 msfRpcPort = 55552
 msfRpcUser = msf
 msfRpcPass = SuperSecret
+[teams]
+teamsHook = https://outlook.office.com/webhook/<randomstuff>
