Added additional Slack/Teams hook checks, updated config and README files

--- a/shellbot.conf
+++ b/shellbot.conf
@@ -1,7 +1,8 @@
+# View the README.md file for an example configuration
 [slack]
-slackHook = https://hooks.slack.com/services/<randomstuff>
+slackHook =
 botName = ShellBot
-channel = #shellbot
+channel =
 [ShellBot]
 sleepTime = 60
 [empire]
@@ -10,6 +11,6 @@ db = /opt/Empire/data/empire.db
 msfRpcHost = 127.0.0.1
 msfRpcPort = 55552
 msfRpcUser = msf
-msfRpcPass = SuperSecret
+msfRpcPass =
 [teams]
 teamsHook = https://outlook.office.com/webhook/<randomstuff>
